--- a/achievements.html
+++ b/achievements.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prestasi - Ni Made Dian Savita</title>
+  <title>Achievements - Ni Made Dian Savita</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gradient-to-b from-gray-50 via-white to-gray-100 text-gray-800">
+<body class="bg-gradient-to-br from-blue-50 via-white to-blue-100 text-gray-800">
 
   <!-- Header / Navbar -->
   <header class="fixed inset-x-0 top-0 z-50 bg-white shadow">
@@ -18,17 +18,18 @@
         </a>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
-        <a href="index.html" class="text-sm font-semibold text-gray-900">Home</a>
-        <a href="datadiri.html" class="text-sm font-semibold text-gray-900">Data Diri</a>
-        <a href="prestasi.html" class="text-sm font-semibold text-indigo-600">Prestasi</a>
+<a href="index.html" class="text-sm font-semibold text-indigo-600">Home</a>
+        <a href="certifications.html" class="text-sm font-semibold text-blue-600">Certifications</a>
+        <a href="achievements.html" class="text-sm font-semibold text-indigo-600">Achievements</a>
+        <a href="organizations.html" class="text-sm font-semibold text-indigo-600">Organizations</a>
       </div>
     </nav>
   </header>
 
   <!-- Hero / Section Header -->
-  <section class="pt-32 pb-12 text-center bg-white shadow-sm">
-    <h1 class="text-4xl font-bold text-gray-900 mb-4">Prestasi</h1>
-    <p class="text-lg text-gray-600">Beberapa pencapaian dan prestasi yang telah diraih</p>
+  <section class="pt-32 pb-12 text-center bg-gradient-to-r from-blue-50 via-white to-blue-100">
+    <h1 class="text-3xl font-bold text-blue-700 mb-4">Achievements</h1>
+    <p class="text-gray-600 mt-2">Beberapa pencapaian dan penghargaan yang pernah saya raih selama perjalanan akademik.</p>
   </section>
 
   <!-- Prestasi Section -->
@@ -36,22 +37,22 @@
     <div class="grid gap-10 md:grid-cols-2">
 
       <!-- Foto Prestasi 1 -->
-      <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition">
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
         <div class="h-72 w-full flex items-center justify-center bg-gray-50">
           <img src="foto/gemastik.jpg" alt="Prestasi 1" class="max-h-full max-w-full object-contain">
         </div>
         <div class="p-6 text-center">
-          <h3 class="font-bold text-lg text-gray-900">Lolos sebagai finalis GEMASTIK 2025</h3>
+          <h3 class="text-l font-semibold text-gray-600">Lolos sebagai finalis GEMASTIK 2025</h3>
         </div>
       </div>
 
       <!-- Foto Prestasi 2 -->
-      <div class="bg-white rounded-xl shadow-md overflow-hidden hover:shadow-lg transition">
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
         <div class="h-72 w-full flex items-center justify-center bg-gray-50">
           <img src="foto/genre.jpg" alt="Prestasi 2" class="max-h-full max-w-full object-contain">
         </div>
         <div class="p-6 text-center">
-          <h3 class="font-bold text-lg text-gray-900">Lolos sebagai finalis Duta Genre Karangasem 2023 SMA</h3>
+          <h3 class="text-l font-semibold text-gray-600">Lolos sebagai finalis Duta Genre Karangasem 2023 SMA</h3>
         </div>
       </div>
 
@@ -59,8 +60,8 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-200 py-6 text-center mt-12">
-    © 2025 Ni Made Dian Savita. All Rights Reserved.
+  <footer class="bg-white text-blue-700 py-6 text-center mt-12 shadow-inner">
+    © 2025 Ni Made Dian Savita. 
   </footer>
 
 </body>
