--- a/organizations.html
+++ b/organizations.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Organisasi - Ni Made Dian Savita</title>
+  <title>Organizations - Ni Made Dian Savita</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800">
+<body class="bg-gradient-to-br from-blue-50 via-white to-blue-100 text-gray-800">
 
   <!-- Header / Navbar -->
   <header class="fixed inset-x-0 top-0 z-50 bg-white shadow">
@@ -19,25 +19,25 @@
         </a>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
-        <a href="index.html" class="text-sm font-semibold text-gray-900">Home</a>
-        <a href="datadiri.html" class="text-sm font-semibold text-gray-900">Data Diri</a>
-        <a href="prestasi.html" class="text-sm font-semibold text-gray-900">Prestasi</a>
-        <a href="organisasi.html" class="text-sm font-semibold text-indigo-600">Organisasi</a>
+        <a href="index.html" class="text-sm font-semibold text-indigo-600">Home</a>
+        <a href="certifications.html" class="text-sm font-semibold text-blue-600">Certifications</a>
+        <a href="achievements.html" class="text-sm font-semibold text-indigo-600">Achievements</a>
+        <a href="organizations.html" class="text-sm font-semibold text-indigo-600">Organizations</a>
       </div>
     </nav>
   </header>
 
   <!-- Hero / Section Header -->
-  <section class="pt-32 pb-12 text-center bg-white">
-    <h1 class="text-4xl font-bold text-gray-900 mb-4">Organisasi</h1>
-    <p class="text-lg text-gray-600">Kegiatan organisasi yang pernah diikuti</p>
+ <section class="pt-32 pb-12 text-center bg-gradient-to-r from-blue-50 via-white to-blue-100">
+    <h1 class="text-3xl font-bold text-blue-700 mb-8">Organizations</h1>
+    <p class="text-gray-600 mt-2">Beberapa pengalaman saya dalam organisasi dan kepanitiaan.</p>
   </section>
 
   <!-- Card Organisasi -->
   <section class="py-12 container mx-auto px-6">
     <div class="bg-white rounded-xl shadow-md overflow-hidden">
       <div class="p-6 border-b">
-        <h2 class="text-2xl font-bold text-gray-900">Himpunan Mahasiswa Jurusan Teknik Informatika 25/26</h2>
+        <h2 class="text-2xl font-bold text-blue-700">Himpunan Mahasiswa Jurusan Teknik Informatika 25/26</h2>
         <p class="text-gray-600 mt-1">Kegiatan dan pengalaman berorganisasi di lingkungan kampus</p>
       </div>
 
@@ -48,7 +48,7 @@
         <div class="bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
           <img src="foto/foto-hmj1.jpg" alt="Kegiatan 1" class="w-full h-40 object-cover rounded-t-lg">
           <div class="p-4">
-            <h3 class="font-semibold text-lg">OKJ 2025</h3>
+            <h3 class="font-semibold text-blue-600 mb-4">OKJ 2025</h3>
             <p class="text-sm text-gray-600 mt-1">Orientasi Kehidupan Jurusan Teknik Informatika Mahasiswa Baru 2025</p>
           </div>
         </div>
@@ -57,7 +57,7 @@
         <div class="bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
           <img src="foto/foto-hmj2.jpg" alt="Kegiatan 2" class="w-full h-40 object-cover rounded-t-lg">
           <div class="p-4">
-            <h3 class="font-semibold text-lg">IT EDUCARE 2025</h3>
+            <h3 class="font-semibold text-blue-600 mb-4">IT EDUCARE 2025</h3>
             <p class="text-sm text-gray-600 mt-1">Menjadi panitia dalam kegiatan IT EDUCARE 2025 program kerja Bidang 4.</p>
           </div>
         </div>
@@ -66,7 +66,7 @@
         <div class="bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
           <img src="foto/foto-hmj3.jpg" alt="Kegiatan 3" class="w-full h-40 object-cover rounded-t-lg">
           <div class="p-4">
-            <h3 class="font-semibold text-lg">IT CAMP 2025</h3>
+            <h3 class="font-semibold text-blue-600 mb-4">IT CAMP 2025</h3>
             <p class="text-sm text-gray-600 mt-1">Kegiatan IT CAMP tahunan fungsionaris HMJ TI 25/26.</p>
           </div>
         </div>
@@ -75,7 +75,7 @@
         <div class="bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
           <img src="foto/foto-hmj4.jpg" alt="Kegiatan 4" class="w-full h-40 object-cover rounded-t-lg">
           <div class="p-4">
-            <h3 class="font-semibold text-lg">TI PEDULI ALAM</h3>
+            <h3 class="font-semibold text-blue-600 mb-4">TI PEDULI ALAM</h3>
             <p class="text-sm text-gray-600 mt-1">Menjadi panitia dalam kegiatan TI PEDULI ALAM 2025 program kerja Bidang 4.</p>
           </div>
         </div>
@@ -84,7 +84,7 @@
         <div class="bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
           <img src="foto/foto-hmj6.jpg" alt="Kegiatan 5" class="w-full h-40 object-cover rounded-t-lg">
           <div class="p-4">
-            <h3 class="font-semibold text-lg">RAPAT UMUM 1 RAKSAKA</h3>
+            <h3 class="font-semibold text-blue-600 mb-4">RAPAT UMUM 1 RAKSAKA</h3>
             <p class="text-sm text-gray-600 mt-1">Rapat Umum 1 Raksaka</p>
           </div>
         </div>
@@ -93,7 +93,7 @@
         <div class="bg-gray-50 rounded-lg shadow hover:shadow-lg transition">
           <img src="foto/foto-hmj7.jpg" alt="Kegiatan 6" class="w-full h-40 object-cover rounded-t-lg">
           <div class="p-4">
-            <h3 class="font-semibold text-lg">RAPAT KERJA HMJ TI 25/26</h3>
+            <h3 class="font-semibold text-blue-600 mb-4">RAPAT KERJA HMJ TI 25/26</h3>
             <p class="text-sm text-gray-600 mt-1">Rapat Kerja pertama HMJ TI 25/26</p>
           </div>
         </div>
@@ -102,11 +102,10 @@
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-200 py-6 text-center mt-12">
-    © 2025 Ni Made Dian Savita. All Rights Reserved.
+   <!-- Footer -->
+  <footer class="bg-white text-blue-700 py-6 text-center mt-12 shadow-inner">
+    © 2025 Ni Made Dian Savita. 
   </footer>
 
 </body>
 </html>
-```
