--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p class="text-lg text-gray-600 mt-3">Mahasiswi Sistem Informasi | Jurusan Teknik Informatika | Universitas Pendidikan Ganesha</p>
 
       <div class="mt-6 flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
-        <a href="CV.pdf" class="bg-blue-500 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-600 text-center">Download CV</a>
+        <a href="cv/" class="bg-blue-500 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-600 text-center">Download CV</a>
         <a href="#contact" class="border border-blue-500 text-blue-500 px-6 py-2 rounded-lg hover:bg-blue-50 text-center">Contact Me</a>
       </div>
     </div>
