Add Certifications page

--- a/certifications.html
+++ b/certifications.html
@@ -1,4 +1,3 @@
-```html
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -23,6 +22,7 @@
         <a href="certifications.html" class="text-sm font-semibold text-blue-600">Certifications</a>
         <a href="achievements.html" class="text-sm font-semibold text-indigo-600">Achievements</a>
         <a href="organizations.html" class="text-sm font-semibold text-indigo-600">Organizations</a>
+      </div>
     </nav>
   </header>
 
@@ -33,40 +33,40 @@
   </section>
 
   <!-- Sertifikasi Section -->
-<section class="py-12 container mx-auto px-6">
-  <div class="grid gap-10 md:grid-cols-3">
+  <section class="py-12 container mx-auto px-6">
+    <div class="grid gap-10 md:grid-cols-3">
 
-    <!-- Sertifikasi 1 -->
-    <div class="bg-white rounded-xl shadow-md overflow-hidden">
-      <img src="foto/belajar dasar manajemen proyek.jpg" alt="Sertifikasi 1" class="w-full h-64 object-cover">
-      <div class="p-6">
-        <h3 class="text-l font-semibold text-gray-600">Sertifikasi Belajar Dasar Manajemen Proyek</h3>
+      <!-- Sertifikasi 1 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
+        <img src="foto/belajar dasar manajemen proyek.jpg" alt="belajar dasar manajemen proyek.jpg" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <h3 class="text-l font-semibold text-gray-600">Sertifikasi Belajar Dasar Manajemen Proyek</h3>
+        </div>
       </div>
-    </div>
 
-    <!-- Sertifikasi 2 -->
-    <div class="bg-white rounded-xl shadow-md overflow-hidden">
-      <img src="foto/memulai pemrograman dengan java.jpg" alt="Sertifikasi 2" class="w-full h-64 object-cover">
-      <div class="p-6">
-        <h3 class="text-l font-semibold text-gray-600">SertifikasiMemulai Pemrograman Dengan Java</h3>
+      <!-- Sertifikasi 2 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
+        <img src="foto/memulai pemrograman dengan java.jpg" alt="memulai pemrograman dengan java.jpg" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <h3 class="text-l font-semibold text-gray-600">Sertifikasi Memulai Pemrograman Dengan Java</h3>
+        </div>
       </div>
-    </div>
 
-    <!-- Sertifikasi 3 -->
-    <div class="bg-white rounded-xl shadow-md overflow-hidden">
-      <img src="foto/memulai pemrograman dengan c.jpg" alt="Sertifikasi 3" class="w-full h-64 object-cover">
-      <div class="p-6">
-        <h3 class="text-l font-semibold text-gray-600">Sertifikasi Memulai Pemrograman Dengan C</h3>
+      <!-- Sertifikasi 3 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
+        <img src="foto/memulai pemrograman dengan c.jpg" alt="memulai pemrograman dengan c.jpg" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <h3 class="text-l font-semibold text-gray-600">Sertifikasi Memulai Pemrograman Dengan C</h3>
+        </div>
       </div>
+
     </div>
+  </section>
 
-  </div>
-</section>
-
- <!-- Footer -->
+  <!-- Footer -->
   <footer class="bg-white text-blue-700 py-6 text-center mt-12 shadow-inner">
     © 2025 Ni Made Dian Savita. 
   </footer>
 
-  </body>
+</body>
 </html>
