--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div id="sections" class="grid gap-8 md:grid-cols-3 px-6 text-center">
 
     <!-- Certifications Card -->
-    <a href="Certifications.html" class="block bg-white shadow-md rounded-xl p-8 border border-blue-100 hover:shadow-xl hover:-translate-y-1 transition-transform duration-300">
+    <a href="certifications.html" class="block bg-white shadow-md rounded-xl p-8 border border-blue-100 hover:shadow-xl hover:-translate-y-1 transition-transform duration-300">
       <div class="w-14 h-14 mx-auto bg-blue-100 flex items-center justify-center rounded-full mb-4">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6M7 4h10M5 8h14v12H5z" />
