--- a/achievements.html
+++ b/achievements.html
@@ -14,8 +14,9 @@
       <div class="flex lg:flex-1">
         <a href="index.html" class="-m-1.5 p-1.5">
           <span class="sr-only">Home</span>
-          <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Logo" class="h-8 w-auto" />
-        </a>
+          <a href="index.html" class="-m-1.5 p-1.5 text-xl font-bold text-blue-700">
+  Dian Savita
+</a>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
 <a href="index.html" class="text-sm font-semibold text-indigo-600">Home</a>
@@ -52,7 +53,7 @@
           <img src="foto/genre.jpg" alt="Prestasi 2" class="max-h-full max-w-full object-contain">
         </div>
         <div class="p-6 text-center">
-          <h3 class="text-l font-semibold text-gray-600">Lolos sebagai finalis Duta Genre Karangasem 2023 SMA</h3>
+          <h3 class="text-l font-semibold text-gray-600">Lolos sebagai Semifinalis Duta Genre Kabupaten Karangasem 2023 SMA</h3>
         </div>
       </div>
 
