--- a/certifications.html
+++ b/certifications.html
@@ -14,8 +14,9 @@
       <div class="flex lg:flex-1">
         <a href="index.html" class="-m-1.5 p-1.5">
           <span class="sr-only">Home</span>
-          <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Logo" class="h-8 w-auto" />
-        </a>
+          <a href="index.html" class="-m-1.5 p-1.5 text-xl font-bold text-blue-700">
+  Dian Savita
+</a>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
        <a href="index.html" class="text-sm font-semibold text-indigo-600">Home</a>
@@ -57,6 +58,14 @@
         <img src="foto/memulai pemrograman dengan c.jpg" alt="memulai pemrograman dengan c.jpg" class="w-full h-64 object-cover">
         <div class="p-6">
           <h3 class="text-l font-semibold text-gray-600">Sertifikasi Memulai Pemrograman Dengan C</h3>
+        </div>
+      </div>
+
+      <!-- Sertifikasi 4 -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
+        <img src="foto/Sertifikasi Semifinalis Duta Genre Kabupaten Karangasem 2023.jpg" alt="memulai pemrograman dengan java.jpg" class="w-full h-64 object-cover">
+        <div class="p-6">
+          <h3 class="text-l font-semibold text-gray-600">Sertifikasi Semifinalis Duta Genre Kabupaten Karangasem 2023</h3>
         </div>
       </div>
 
