--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="#about" class="text-blue-500 hover:text-blue-600">About</a>
       <a href="#story" class="text-blue-500 hover:text-blue-600">My Story</a>
       <a href="#education" class="text-blue-500 hover:text-blue-600">Education</a>
-      <a href="#skills" class="text-blue-500 hover:text-blue-600">Skills</a>
+      <a href="#skills" class="text-blue-500 hover:text-blue-600">My Skills</a>
       <a href="#contact" class="text-blue-500 hover:text-blue-600">Contact</a>
     </div>
   </nav>
@@ -41,7 +41,7 @@
       <p class="text-lg text-gray-600 mt-3">Mahasiswi Sistem Informasi | Jurusan Teknik Informatika | Universitas Pendidikan Ganesha</p>
 
       <div class="mt-6 flex flex-col sm:flex-row gap-4 justify-center md:justify-start">
-        <a href="cv/Tugas 4-CV (canva).pdf" 
+        <a href="cv/CV.pdf" 
    class="bg-blue-500 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-600 text-center" 
    target="_blank">
    Download CV
@@ -273,15 +273,19 @@
         <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12H8m8-4H8m4 8h.01M21 12c0 4.418-3.582 8-8 8s-8-3.582-8-8 3.582-8 8-8 8 3.582 8 8z" />
         </svg>
-        <a href="dian.savita@student.undiksha.ac.id" class="text-blue-600 hover:underline">dian.savita@student.undiksha.ac.id</a>
+        <a href="mailto:dian.savita@student.undiksha.ac.id" class="text-blue-600 hover:underline">
+          dian.savita@student.undiksha.ac.id
+        </a>
       </div>
 
-      <!-- Phone -->
+      <!-- WhatsApp -->
       <div class="flex items-center justify-center space-x-3">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h2.28a1 1 0 01.948.684l1.518 4.553a1 1 0 01-.27 1.057l-1.21 1.21a16.001 16.001 0 007.07 7.07l1.21-1.21a1 1 0 011.057-.27l4.553 1.518a1 1 0 01.684.949V19a2 2 0 01-2 2h-1c-9.941 0-18-8.059-18-18V5z" />
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 text-blue-400" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M20.52 3.48A11.85 11.85 0 0012 0C5.37 0 0 5.37 0 12c0 2.11.55 4.16 1.6 5.97L0 24l6.2-1.62A11.95 11.95 0 0012 24c6.63 0 12-5.37 12-12 0-3.19-1.24-6.19-3.48-8.52zM12 22c-1.77 0-3.5-.46-5.03-1.33l-.36-.21-3.67.96.98-3.58-.24-.37A9.94 9.94 0 012 12C2 6.49 6.49 2 12 2c2.66 0 5.17 1.04 7.07 2.93C20.96 6.83 22 9.34 22 12c0 5.51-4.49 10-10 10zm5.14-7.09c-.27-.14-1.62-.8-1.87-.9-.25-.09-.43-.14-.62.14-.18.27-.71.9-.87 1.09-.16.18-.32.2-.59.07-.27-.14-1.13-.42-2.15-1.34-.79-.71-1.32-1.58-1.47-1.85-.15-.27-.02-.42.11-.56.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.62-1.5-.85-2.06-.22-.53-.44-.46-.62-.47-.16-.01-.34-.01-.52-.01s-.48.07-.73.34c-.25.27-.96.94-.96 2.29s.99 2.66 1.13 2.84c.14.18 1.95 2.98 4.74 4.18.66.29 1.17.46 1.57.59.66.21 1.26.18 1.73.11.53-.08 1.62-.66 1.85-1.3.23-.64.23-1.19.16-1.3-.07-.11-.25-.18-.52-.32z"/>
         </svg>
-        <a href="tel:+6282146896960" class="text-blue-600 hover:underline">+62 821-4689-6960</a>
+        <a href="https://wa.me/6282146896960" target="_blank" class="text-blue-600 hover:underline">
+          082146896960
+        </a>
       </div>
 
       <!-- Instagram -->
