--- a/organizations.html
+++ b/organizations.html
@@ -15,8 +15,9 @@
       <div class="flex lg:flex-1">
         <a href="index.html" class="-m-1.5 p-1.5">
           <span class="sr-only">Home</span>
-          <img src="https://tailwindcss.com/plus-assets/img/logos/mark.svg?color=indigo&shade=600" alt="Logo" class="h-8 w-auto" />
-        </a>
+         <a href="index.html" class="-m-1.5 p-1.5 text-xl font-bold text-blue-700">
+  Dian Savita
+</a>
       </div>
       <div class="hidden lg:flex lg:gap-x-12">
         <a href="index.html" class="text-sm font-semibold text-indigo-600">Home</a>
