Update index.html dan tambah script.js

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
    Download CV
 </a>
         <a href="#contact" class="border border-blue-500 text-blue-500 px-6 py-2 rounded-lg hover:bg-blue-50 text-center">Contact Me</a>
+        <a id="linkedinBtn" href="https://www.linkedin.com/in/ni-made-dian-savita-476b48386/" target="_blank" class="bg-blue-500 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-600 text-center">
+    LinkedIn
+  </a>
       </div>
     </div>
   </section>
@@ -303,6 +306,14 @@
   <footer class="bg-white text-blue-700 py-6 text-center mt-12 shadow-inner">
     © 2025 Ni Made Dian Savita. 
   </footer>
+
+  <!-- Tombol Scroll-to-Top -->
+  <button id="scrollTopBtn" class="fixed bottom-5 right-5 bg-blue-500 text-white px-4 py-2 rounded-full shadow-lg hidden">
+    ↑
+  </button>
+  
+  <!-- Hubungkan file JS -->
+  <script src="script.js"></script>
 
 </body>
 </html>
